--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@zerodevx/svelte-toast": "^0.8.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.52.0",
-    "svelte-modals": "^1.2.0",
     "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.1.5",
